# DocReaderQuizzes

./: .gitignore  CMakeLists.txt  LICENSE  Quizzes_ar_EG.ts  README.md  main.cpp
assets/: resources.aps  resources.qrc  resources.rc  resrouces.qrc
assets/translations/: Quizzes_ar_EG.qm
include/: additemdialog.h  additemdialog.ui  docreaderquizes.h  docreaderquizes.ui  docreaderquizzes.h  docreaderquizzes.ui  ez4ms.h  ez4ms.ui  fileparser.h  googleformapi.h  googleformsapihelperclasses.h  googlegeminiapi.h  googlegeminiapihelperclasses.h  googlesso.h  logger.h  logger.ui  settings.h  settings.ui  updateformdialog.h  updateformdialog.ui
src/: additemdialog.cpp  docreaderquizes.cpp  docreaderquizzes.cpp  ez4ms.cpp  fileparser.cpp  googleformapi.cpp  googleformsapihelperclasses.cpp  googlegeminiapi.cpp  googlegeminiapihelperclasses.cpp  googlesso.cpp  logger.cpp  settings.cpp  updateformdialog.cpp
tests/: option_indicator_test.txt  question_indicator_test.txt
